--- a/src/app/containers/app.component.html
+++ b/src/app/containers/app.component.html
@@ -18,3 +18,9 @@
   </div>
 
 </md-sidenav-layout>
+
+<span class="app-action">
+  <button md-mini-fab color="primary" (click)="backClicked()"><md-icon>arrow_back</md-icon></button>
+  <button md-mini-fab color="primary" (click)="forwardClicked()"><md-icon>arrow_forward</md-icon></button>
+</span>
+
